--- a/WebApplication3/Views/Customers/CustomerForm.cshtml
+++ b/WebApplication3/Views/Customers/CustomerForm.cshtml
@@ -1,4 +1,5 @@
-﻿@model WebApplication3.ViewModels.CustomerFormViewModel
+﻿@using Microsoft.CodeAnalysis.Scripting
+@model WebApplication3.ViewModels.CustomerFormViewModel
 
 @{
     ViewData["Title"] = "Movie Form";
@@ -9,30 +10,42 @@
 @if (Model is null)
 {
     <text>Application can not reach the database</text>
+    ViewBag.Title = Model.Title;
+    <h1>@Model.Title</h1>
 }
 else
 {
     @using (Html.BeginForm("Save", "Customers"))
     {
         <div style="font-size: 20px">
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="mt-3">
-                @Html.LabelFor(m => m.Customer.Name, new { @class = "form-label" })
-                @Html.TextBoxFor(m => m.Customer.Name, new { @class = "form-control", placeholder = "Name"})
+                @Html.LabelFor(m => m.Name, new {@class = "form-label"})
+                @Html.TextBoxFor(m => m.Name, new {@class = "form-control", placeholder = "Name"})
+                @Html.ValidationMessageFor(m => m.Name)
             </div>
             <div class="mt-3">
-                @Html.LabelFor(m => m.Customer.BirthDate, new { @class = "form-label" })
-                @Html.TextBoxFor(m => m.Customer.BirthDate, "{0:dd.MM.yyyy}", new { @class = "form-control", placeholder = "BirthDate"})
-                @Html.EditorFor(m => m.Customer.BirthDate, new { @class = "form-control"})
+                @Html.LabelFor(m => m.MembershipTypeId, new {@class = "form-label"})
+                @Html.DropDownListFor(m => m.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "Name"), "Select Membership Type", new {@class = "form-control"})
+                @Html.ValidationMessageFor(m => m.MembershipTypeId)
             </div>
             <div class="mt-3">
-                @Html.LabelFor(m => m.Customer.MembershipTypeId, new { @class = "form-label" })
-                @Html.DropDownListFor(m => m.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "Name"), "Select Membership Type",new { @class = "form-control" })
+                @Html.LabelFor(m => m.BirthDate, new {@class = "form-label"})
+                @Html.TextBoxFor(m => m.BirthDate, "{0:d MMM yyyy}", new {@class = "form-control", placeholder = "BirthDate"})
+                @Html.ValidationMessageFor(m => m.BirthDate)
             </div>
             <div class="form-check mt-3">
-                @Html.CheckBoxFor(m =>  m.Customer.IsSubscribedToNewsletter, new { @class = "form-check-input" }) 
-                @Html.LabelFor(m => m.Customer.IsSubscribedToNewsletter, "Subscribe to News Later?",new { @class = "form-check-label" })
+                @Html.CheckBoxFor(m => m.IsSubscribedToNewsletter, new {@class = "form-check-input"})
+                @Html.LabelFor(m => m.IsSubscribedToNewsletter, "Subscribe to News Later?", new {@class = "form-check-label"})
             </div>
         </div>
+        @Html.HiddenFor(m => m.Id)
+        @Html.AntiForgeryToken()
         <button type="submit" class="btn btn-primary">Save</button>
     }
+}
+
+@section Scripts
+{
+    @{ <partial name="_ValidationScriptsPartial"/>}
 }
