--- a/WebApplication3/Views/Movies/MovieForm.cshtml
+++ b/WebApplication3/Views/Movies/MovieForm.cshtml
@@ -1,11 +1,5 @@
 ﻿@model WebApplication3.ViewModels.MovieFormViewModel
 
-@{
-    ViewBag.Title = Model.Title;
-}
-
-<h1>@Model.Title</h1>
-
 
 @if (Model is null)
 {
@@ -13,32 +7,43 @@
 }
 else
 {
+    ViewBag.Title = Model.Title;
+    <h1>@Model.Title</h1>
+
     @using (Html.BeginForm("Save", "Movies"))
     {
+        <div asp-validation-summary="All" class="text-danger"></div>
         <form>
-        <div style="font-size: 20px">
-            <div class="mt-3">
-                @Html.LabelFor(m => m.Movie.Name, new { @class = "form-label" })
-                @Html.TextBoxFor(m => m.Movie.Name, new { @class = "form-control", placeholder = "Name"})
+            <div style="font-size: 20px">
+                <div class="mt-3">
+                    @Html.LabelFor(m => m.Name, new { @class = "form-label" })
+                    @Html.TextBoxFor(m => m.Name, new { @class = "form-control", placeholder = "Name"})
+                    @Html.ValidationMessageFor(m => m.Name)
+                </div>
+                <div class="mt-3">
+                    @Html.LabelFor(m => m.ReleaseDate, new { @class = "form-label" })
+                    @Html.TextBoxFor(m => m.ReleaseDate, "{0:d MMM yyyy}", new { @class = "form-control", placeholder = "Release Date"})
+                    @Html.ValidationMessageFor(m => m.ReleaseDate)
+                </div>
+                <div class="mt-3">
+                    @Html.LabelFor(m => m.NumberInStock, new { @class = "form-label" })
+                    @Html.TextBoxFor(m => m.NumberInStock, new { @class = "form-control", placeholder = "Number in Stock"})
+                    @Html.ValidationMessageFor(m => m.NumberInStock)
+                </div>
+                <div class="mt-3">
+                    @Html.LabelFor(m => m.GenreId, new { @class = "form-label" })
+                    @Html.DropDownListFor(m => m.GenreId, new SelectList(Model.Genres, "Id", "Name"), "Select Movie Genre",new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.GenreId)
+                </div>
             </div>
-            <div class="mt-3">
-                @Html.LabelFor(m => m.Movie.ReleaseDate, new { @class = "form-label" })
-                @Html.TextBoxFor(m => m.Movie.ReleaseDate, "{0:dd.MM.yyyy}", new { @class = "form-control", placeholder = "Release Date"})
-            </div>
-            <div class="mt-3">
-                @Html.LabelFor(m => m.Movie.DateAdded, new { @class = "form-label" })
-                @Html.TextBoxFor(m => m.Movie.DateAdded, "{0:dd.MM.yyyy}", new { @class = "form-control", placeholder = "Date of Adding"})
-            </div>
-            <div class="mt-3">
-                @Html.LabelFor(m => m.Movie.NumberInStock, new { @class = "form-label" })
-                @Html.TextBoxFor(m => m.Movie.NumberInStock, new { @class = "form-control", placeholder = "Number in Stock"})
-            </div>
-            <div class="mt-3">
-                @Html.LabelFor(m => m.Movie.Genre, new { @class = "form-label" })
-                @Html.DropDownListFor(m => m.Movie.GenreId, new SelectList(Model.Genres, "Id", "Name"), "Select Movie Genre",new { @class = "form-control" })
-            </div>
-        </div>
-        <button type="submit" class="btn btn-primary mt-3">Save</button>
+            @Html.HiddenFor(m => m.Id)
+            @Html.AntiForgeryToken()
+            <button type="submit" class="btn btn-primary mt-3">Save</button>
         </form>
     }
+}
+
+@section Scripts
+{
+    @{ <partial name="_ValidationScriptsPartial"/>}
 }
