--- a/WebApplication3/Views/Customers/CustomerForm.cshtml
+++ b/WebApplication3/Views/Customers/CustomerForm.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.CodeAnalysis.Scripting
-@model WebApplication3.ViewModels.CustomerFormViewModel
+@model Vidly.ViewModels.CustomerFormViewModel
 
 @{
     ViewData["Title"] = "Movie Form";
