--- a/WebApplication3/Views/Customers/Details.cshtml
+++ b/WebApplication3/Views/Customers/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model WebApplication3.ViewModels.CustomerDetailsViewModel
+@model Vidly.ViewModels.CustomerDetailsViewModel
 
 @{
     ViewData["Title"] = "Customer details";
