--- a/WebApplication3/Views/Movies/Details.cshtml
+++ b/WebApplication3/Views/Movies/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model WebApplication3.ViewModels.MovieDetailsViewModel
+@model Vidly.ViewModels.MovieDetailsViewModel
 
 @{
     ViewData["Title"] = "Movie details";
