--- a/WebApplication3/Views/Movies/Index.cshtml
+++ b/WebApplication3/Views/Movies/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication3.ViewModels.MoviesViewModel
+﻿@model Vidly.ViewModels.MoviesViewModel
 
 @{
     ViewData["Title"] = "Movies";
