--- a/WebApplication3/Views/Movies/Random.cshtml
+++ b/WebApplication3/Views/Movies/Random.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication3.ViewModels.RandomMovieViewModel
+﻿@model Vidly.ViewModels.RandomMovieViewModel
 
 @{
     ViewData["Title"] = "Random";
